--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "nest start",
     "start:dev": "yarn start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "set PRODUCTION=true && node dist/main",
+    "start:prod": "yarn build && set PRODUCTION=true && node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
